# JobSearch

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: blocked_companies.example.yaml  blocked_companies.yaml  company_boards.example.yaml  eligibility_rules.yaml  gmail.example.yaml  network.example.yaml  network.yaml  professional_profile.example.yaml  profile.example.yaml  profile.yaml  ranking_weights.yaml  relevance_rules.yaml  search_queries.example.yaml  search_queries.yaml  sources.example.yaml  ui.example.yaml
data/fixtures/: import-example.csv  import-example.json  jobs.json
docs/: application-history-import.md  application-policy.md  application-tracking.md  architecture.md  board-configuration.md  calendar.md  collector-development-playbook.md  collectors.md  company-intelligence.md  data-model.md  design-system.md  gmail-read-only.md  gupy-collector.md  import-format.md  local-setup.md  network-policy.md  privacy-policy.md  product-spec.md  professional-profile.md  relevance.md  resume-import.md  review-workflow.md  search-queries.md  source-strategy.md  state-machine.md  web-interface.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_file_import_audit.py  0003_collection_infrastructure.py  0004_collection_scope_keys.py  0005_search_queries_and_gupy.py  0006_relevance_consistency_and_observations.py  0007_review_and_application_history.py  0008_professional_profile_and_tracking.py  0009_tracking_integrity_and_calendar.py  0010_requirement_detail_audit.py  (+4 more)
tests/: conftest.py
(+185 files in other folders)
